--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -1,10 +1,10 @@
 .wrapper {
   background: black;
-  padding: 65px;
+  padding: 30px 100px;
   min-height: 100vh;
 
   @media screen and (max-width: 600px) {
-    padding: 65px 30px;
+    padding: 30px;
   }
 }
 
@@ -13,6 +13,10 @@
   text-align: center;
   background-color: #d3d3d3;
   margin-bottom: 10px;
+
+  @media screen and (max-width: 600px) {
+    background-color: white;
+  }
 }
 
 .refresh-button-panel {
@@ -25,7 +29,7 @@
   }
 
   button {
-    background-color: #d3d3d3;
+    background-color: rgb(216, 216, 216);
     border: 0px;
     color: black;
     border-radius: 10px;
@@ -44,7 +48,8 @@
 .data-panel {
   margin: 0px 20px;
   text-align: center;
-  color: grey;
+  color: rgb(216, 216, 216);
+  padding: 0px 12.5%;
 
   .column {
     float: left;
@@ -55,7 +60,7 @@
   }
 
   .chart {
-    margin: 0px 12.5%;
+    padding: 0px 20%;
   }
 
   .row:after {
