--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -49,7 +49,7 @@
   margin: 0px 20px;
   text-align: center;
   color: rgb(216, 216, 216);
-  padding: 0px 12.5%;
+  // padding: 0px 12.5%;
 
   .column {
     float: left;
@@ -60,7 +60,7 @@
   }
 
   .chart {
-    padding: 0px 20%;
+    margin: 0px 20%;
   }
 
   .row:after {
