--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -9,7 +9,7 @@
 }
 
 .header-row {
-  padding: 20px;
+  padding: 15px;
   text-align: center;
   background-color: #d3d3d3;
   margin-bottom: 10px;
@@ -21,7 +21,6 @@
 
 .refresh-button-panel {
   text-align: center;
-  margin: 10px 0px;
 
   i {
     position: absolute;
@@ -70,7 +69,6 @@
   }
 
   .header {
-    margin-top: 20px;
     font-weight: 600;
     font-size: 28px;
     text-align: center;
@@ -78,6 +76,13 @@
 
   .title {
     padding-bottom: 0px;
+
+    span {
+      font-size: 28px;
+      font-weight: 600;
+      align-items: center;
+    }
+
   }
 
   @media screen and (max-width: 600px) {
