--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -19,43 +19,52 @@
   }
 }
 
-.refresh-button-panel {
+.row-panel {
   text-align: center;
 
-  i {
-    position: absolute;
-    display: none;
-  }
+  .row {
+    text-align: center;
+    margin: 0 10%;
 
-  button {
-    background-color: rgb(216, 216, 216);
-    border: 0px;
-    color: black;
-    border-radius: 10px;
-    transition: 0.4s;
-    border: 0;
-
-    &:hover {
-      background-color: #00ccff81;
-      color: #ffffff;
-      border-radius: 30px;
-
+    @media screen and (max-width: 600px) {
+      margin: 5%;
     }
   }
 }
 
 .data-panel {
-  margin: 0px 20px;
+  margin: 0px 30px;
   text-align: center;
   color: rgb(216, 216, 216);
   // padding: 0px 12.5%;
+
+  .header-row {
+    padding: 15px;
+    text-align: center;
+    background-color: #d3d3d3;
+    margin-bottom: 10px;
+    color: black;
+    margin: 30px 0px;
+
+    @media screen and (max-width: 600px) {
+      background-color: white;
+    }
+  }
 
   .column {
     float: left;
     width: 50%;
     padding: 10px;
     border: 10px;
-    border-color: white;
+  }
+
+  .column-4 {
+    text-align: center;
+    padding: 2.5%;
+    margin: 5%;
+    width: 40%;
+    border: 1px solid #b4b4b4;
+    text-transform: wrap;
   }
 
   .chart {
@@ -86,13 +95,62 @@
   }
 
   @media screen and (max-width: 600px) {
-    .column {
+
+    .column,
+    .column-4 {
       width: 100%;
     }
 
     .chart {
       margin: 0px;
     }
+  }
+}
+
+
+.chart-modal {
+  color: white;
+  background-color: black;
+  text-align: center;
+  border: 1px solid #b4b4b4;
+
+
+  .close {
+    color: rgb(216, 216, 216);
+    background-color: black;
+
+    &:hover {
+      color: #ffffff;
+    }
+  }
+}
+
+.btn {
+  background-color: rgb(216, 216, 216);
+  border: 0px;
+  color: black;
+  border-radius: 10px;
+  transition: 0.4s;
+  border: 0;
+
+  &:hover {
+    background-color: #00ccff81;
+    color: #ffffff;
+    border-radius: 30px;
+
+  }
+}
+
+.fixed-row {
+  padding: 20px;
+  min-height: 350px;
+}
+
+.margin-top-lg {
+  margin-top: 10%;
+
+  @media screen and (max-width: 600px) {
+    margin-top: 20px;
   }
 }
 
