--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -10,6 +10,7 @@
 
 .header-row {
   padding: 15px;
+  margin: 15px;
   text-align: center;
   background-color: #d3d3d3;
   margin-bottom: 10px;
@@ -37,19 +38,6 @@
   text-align: center;
   color: rgb(216, 216, 216);
   // padding: 0px 12.5%;
-
-  .header-row {
-    padding: 15px;
-    text-align: center;
-    background-color: #d3d3d3;
-    margin-bottom: 10px;
-    color: black;
-    margin: 30px 0px;
-
-    @media screen and (max-width: 600px) {
-      background-color: white;
-    }
-  }
 
   .column {
     float: left;
@@ -141,16 +129,27 @@
   }
 }
 
+.globalView {
+  margin-bottom: 5%;
+  background-color: black;
+  color: greenyellow;
+
+  @media screen and (max-width: 600px) {
+
+    display: none;
+  }
+}
+
 .fixed-row {
   padding: 20px;
   min-height: 350px;
 }
 
-.margin-top-lg {
-  margin-top: 10%;
+.padding-top-lg {
+  padding-top: 30px;
 
   @media screen and (max-width: 600px) {
-    margin-top: 20px;
+    padding-top: 20px;
   }
 }
 
