--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -50,6 +50,7 @@
     text-align: center;
     padding: 2.5%;
     margin: 5%;
+    margin-bottom: 0px;
     width: 40%;
     border: 1px solid #b4b4b4;
     text-transform: wrap;
@@ -120,6 +121,61 @@
   border-radius: 10px;
   transition: 0.4s;
   border: 0;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #00ccff81;
+    color: #ffffff;
+    border-radius: 30px;
+
+  }
+}
+
+#goToTopButton {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  background-color: #00ccff81;
+  border: 0px;
+  background-color: rgb(216, 216, 216);
+  border-radius: 10px;
+  transition: 0.4s;
+  border: 0;
+  cursor: pointer;
+
+  @media screen and (max-width: 600px) {
+    font-size: 12px;
+    right: 5px;
+  }
+
+  &:hover {
+    background-color: #00ccff81;
+    color: #ffffff;
+    border-radius: 30px;
+
+  }
+}
+
+#goToGlobalButton {
+  display: block;
+  position: fixed;
+  bottom: 40px;
+  right: 30px;
+  z-index: 99;
+  background-color: #00ccff81;
+  border: 0px;
+  background-color: rgb(216, 216, 216);
+  border-radius: 10px;
+  transition: 0.4s;
+  border: 0;
+  cursor: pointer;
+
+  @media screen and (max-width: 600px) {
+    font-size: 12px;
+    right: 5px;
+  }
 
   &:hover {
     background-color: #00ccff81;
@@ -143,6 +199,14 @@
 .fixed-row {
   padding: 20px;
   min-height: 350px;
+}
+
+.padding-top-xlg {
+  padding-top: 50px;
+
+  @media screen and (max-width: 600px) {
+    padding-top: 20px;
+  }
 }
 
 .padding-top-lg {
