--- a/src/util/styles/_common.scss
+++ b/src/util/styles/_common.scss
@@ -141,6 +141,10 @@
       margin-bottom: 20px;
     }
 
+    .column-4 {
+      margin: 0px 20px;
+    }
+
     .chart {
       margin: 0px;
 
@@ -381,7 +385,7 @@
   padding: 30px 10px;
 
   @media screen and (max-width: 600px) {
-    margin: 0px;
+    margin: 10px 0px;
     padding: 10px 0px;
   }
 }
