--- a/src/util/styles/_common.scss
+++ b/src/util/styles/_common.scss
@@ -10,19 +10,23 @@
 
 .header-row {
   padding: 15px;
-  margin: 15px;
+  margin: 0 40px 2.5%;
   text-align: center;
-  background-color: white;
-  margin-bottom: 10px;
+  color: white;
+  box-shadow: 0px 0px 10px rgba(white, 0.3);
 
-  &.header {
-    padding: 20px;
-
-    p {
-      margin-bottom: 0px;
+  p {
+    a {
+      text-decoration: underline;
+      color: blue($color: #008cff);
     }
 
-    color: black;
+    margin: 0px;
+  }
+
+
+  @media screen and (max-width: 600px) {
+    margin: 0px 10px 10px;
   }
 }
 
@@ -77,6 +81,10 @@
     width: 30%;
     border: 0px;
     text-transform: wrap;
+
+    .chart-bar {
+      width: 20%;
+    }
   }
 
   .updates {
