--- a/src/util/styles/_common.scss
+++ b/src/util/styles/_common.scss
@@ -388,7 +388,7 @@
 }
 
 .border-box-sm {
-  border: 1px solid rgba(255, 255, 255, 0.342);
+  box-shadow: 0px 0px 10px rgba(white, 0.3);
   margin: 10px;
   padding: 30px 10px;
 
