--- a/src/util/styles/_common.scss
+++ b/src/util/styles/_common.scss
@@ -15,13 +15,9 @@
   color: white;
   box-shadow: 0px 0px 10px rgba(white, 0.3);
 
-  p {
-    a {
-      text-decoration: underline;
-      color: blue($color: #008cff);
-    }
-
-    margin: 0px;
+  a {
+    text-decoration: underline;
+    color: blue($color: #008cff);
   }
 
 
@@ -73,6 +69,10 @@
     width: 50%;
     padding: 10px;
     border: 10px;
+
+    &.chart-bar {
+      padding: 0 5%;
+    }
   }
 
   .column-4 {
@@ -82,9 +82,6 @@
     border: 0px;
     text-transform: wrap;
 
-    .chart-bar {
-      width: 20%;
-    }
   }
 
   .updates {
@@ -206,26 +203,25 @@
 }
 
 .btn {
-  background-color: rgba(255, 255, 255, 0.295);
+  background-color: rgba(255, 255, 255, 0.8);
   border: 0px;
-  color: white;
+  color: black;
   border-radius: 10px;
   transition: 0.4s;
   border: 0;
   cursor: pointer;
 
   &.reload {
-    background-color: rgba(0, 0, 0, 0.205);
-    color: black;
+    margin: 5px;
   }
 
   &:hover {
-    background-color: rgba(255, 255, 255, 0.719);
-    color: black;
+    background-color: #00ccff81;
+    color: white;
     border-radius: 30px;
 
     &.reload {
-      background-color: rgba(0, 0, 0, 0.589);
+      background-color: rgba(255, 255, 255, 0.3);
       color: rgb(255, 255, 255);
     }
 
