--- a/src/util/styles/_common.scss
+++ b/src/util/styles/_common.scss
@@ -393,3 +393,13 @@
     padding: 10px 0px;
   }
 }
+
+.special-box {
+  box-shadow: 0px 0px 10px rgba(rgb(255, 187, 0), 0.7);
+  margin: 20px 0px;
+
+  @media screen and (max-width: 600px) {
+    margin: 10px 0px;
+    padding: 20px 0px 10px;
+  }
+}
