dev detail added

--- a/src/util/styles/styles.scss
+++ b/src/util/styles/styles.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url('https://www.w3schools.com/w3css/4/w3.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
 @import url('https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css');
 
