--- a/src/util/styles/_common.scss
+++ b/src/util/styles/_common.scss
@@ -8,6 +8,38 @@
   }
 }
 
+.dev-detail {
+  background: black;
+  padding: 10px 200px;
+  color: white;
+  text-align: center;
+
+  i {
+    color: white;
+    position: relative;
+    top: -2px;
+
+    &:hover {
+      color: #00ccff81;
+      background-color: transparent;
+    }
+  }
+
+  button {
+    color: white;
+    background-color: transparent;
+    padding: 0px 10px;
+
+    &:hover {
+      background-color: transparent;
+    }
+  }
+
+  @media screen and (max-width: 850px) {
+    padding: 10px;
+  }
+}
+
 .header-row {
   padding: 15px;
   margin: 0 40px 2.5%;
@@ -228,48 +260,60 @@
   }
 }
 
-#goToTopButton {
-  display: none;
-  position: fixed;
-  bottom: 40px;
-  right: 30px;
-  z-index: 99;
-  border: 0px;
-  background-color: rgb(255, 255, 255);
-  color: black;
-  border-radius: 10px;
-  transition: 0.4s;
-  border: 0;
-  cursor: pointer;
+#reloadButton {
+  left: 30px;
+
+  i {
+    display: none;
+  }
 
   @media screen and (max-width: 850px) {
-    font-size: 12px;
-    right: 5px;
+    border-radius: 45px;
+    bottom: 20px;
+    left: 5px;
+    color: white;
+    background-color: rgba(255, 255, 255, 0.3);
+
+    span {
+      display: none;
+    }
+
+    i {
+      display: block;
+    }
+
+    &:hover {
+      background-color: #00ccff3a;
+    }
   }
 
-  &:hover {
-    background-color: #00ccff81;
-    color: #ffffff;
-    border-radius: 30px;
+}
 
-  }
+#goToTopButton {
+  display: none;
 }
 
 #goToGlobalButton {
   display: block;
+}
+
+.floating-btn {
   position: fixed;
   bottom: 40px;
   right: 30px;
   z-index: 99;
   border: 0px;
-  background-color: rgb(255, 255, 255);
-  color: black;
+  background-color: rgba(255, 255, 255, 0.4);
+  color: white;
   border-radius: 10px;
-  transition: 0.4s;
+  transition: 0.2s;
   border: 0;
   cursor: pointer;
 
   @media screen and (max-width: 850px) {
+    background-color: rgba(255, 255, 255, 0.3);
+    color: #ffffff;
+    bottom: 20px;
     font-size: 12px;
     right: 5px;
   }
@@ -303,6 +347,14 @@
 
   @media screen and (max-width: 850px) {
     padding-top: 20px;
+  }
+}
+
+.padding-top-md {
+  padding-top: 10px;
+
+  @media screen and (max-width: 850px) {
+    padding-top: 10px;
   }
 }
 
