--- a/src/util/styles/_common.scss
+++ b/src/util/styles/_common.scss
@@ -156,6 +156,11 @@
 
     &.line {
       margin: 0px 5%;
+      max-height: max-content;
+
+      .mean {
+        margin: 0px 10%;
+      }
     }
   }
 
@@ -454,4 +459,9 @@
     margin: 10px 0px;
     padding: 20px 0px 10px;
   }
+}
+
+.timeline-toggle-btn {
+  margin: 0px 0px 5px;
+  padding: 5px 20px;
 }
