--- a/src/util/styles/_table.scss
+++ b/src/util/styles/_table.scss
@@ -45,7 +45,6 @@
       vertical-align: middle;
       border-color: inherit;
       text-align: center;
-      background-color: blue;
 
       &.p-datatable-thead {
         tr {
@@ -73,17 +72,53 @@
 
             &.p-highlight {
               color: black;
+              background-color: rgb(235, 233, 233);
+
+              &.active {
+                color: white;
+                background-color: rgba(0, 0, 255, 0.4);
+              }
+
+              &.recovered {
+                color: white;
+                background-color: rgba(0, 255, 0, 0.4);
+              }
+
+              &.deaths {
+                color: white;
+                background-color: rgba(255, 0, 0, 0.4)
+              }
             }
 
             &.p-sortable-column {
-
               &:focus {
                 box-shadow: none;
               }
 
+              &:hover {
+                color: white;
+
+                &.confirmed {
+                  color: black;
+                }
+
+                &.active {
+                  background-color: rgba(0, 0, 255, 0.4);
+                }
+
+                &.recovered {
+                  background-color: rgba(0, 255, 0, 0.4);
+                }
+
+                &.deaths {
+                  background-color: rgba(255, 0, 0, 0.4)
+                }
+
+              }
+
               .p-sortable-column-icon {
                 font-size: 12px;
-                color: rgba(218, 218, 218, 0.884);
+                color: white;
                 margin-top: -3px;
               }
             }
@@ -209,8 +244,31 @@
           }
 
           &:hover {
+
             td {
-              color: rgb(218, 218, 218);
+              color: white;
+
+              &.active {
+                &:hover {
+                  color: black;
+                  background-color: rgba(0, 25, 255, 0.4);
+                }
+              }
+
+              &.recovered {
+                &:hover {
+                  color: black;
+                  background-color: rgba(0, 255, 0, 0.4);
+                }
+              }
+
+              &.deaths {
+                &:hover {
+                  color: black;
+                  background-color: rgba(255, 0, 0, 0.4)
+                }
+              }
+
 
               span {
                 color: rgba(218, 218, 218, 0.473);
