--- a/src/util/styles/_common.scss
+++ b/src/util/styles/_common.scss
@@ -69,6 +69,13 @@
     text-transform: wrap;
   }
 
+  .text-center {
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    text-transform: wrap;
+  }
+
   .row:after {
     content: "";
     display: table;
@@ -111,6 +118,15 @@
     text-align: center;
     margin: 1.6666%;
     width: 30%;
+    border: 0px;
+    text-transform: wrap;
+
+  }
+
+  .column-wide {
+    text-align: center;
+    margin: 1.6666%;
+    width: 100%;
     border: 0px;
     text-transform: wrap;
 
@@ -452,8 +468,12 @@
 }
 
 .special-box {
-  box-shadow: 0px 0px 10px rgba(rgb(255, 187, 0), 0.7);
+  box-shadow: 0px 0px 10px rgba(rgb(255, 187, 0), 0.3);
   margin: 20px 0px;
+
+  .text-center {
+    text-align: center;
+  }
 
   @media screen and (max-width: 600px) {
     margin: 10px 0px;
