--- a/src/util/styles/_common.scss
+++ b/src/util/styles/_common.scss
@@ -85,6 +85,10 @@
       font-size: 20px;
     }
 
+    h2 {
+      font-size: 18px;
+    }
+
     p {
       color: rgba(white, 0.6);
       font-size: small;
